[package]
name = "cryptographer"
version = "0.2.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"
description = "A Go-like crypto library in Rust"
documentation = "https://docs.rs/cryptographer"
homepage = "https://crates.io/crates/cryptographer"
keywords = ["encryption", "digital signature", "cryptography"]
license-file = "LICENSE"
repository = "https://github.com/sammyne/cryptographer.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.3.2"
rand = "0.7.2"

[dependencies.digest]
tag = "digest-v0.8.1"
git = "https://github.com/RustCrypto/traits.git"

[dependencies.ed25519-dalek]
version = "1.0.0-pre.2"

[dependencies.encoding]
rev = "f28b0c5ff27ad0a0973359a410673280f1ef5d85"
git = "https://github.com/sammyne/encoding-rs.git"

[dependencies.libsecp256k1]
rev = "0628d1ed8979e08e265169bf32754f860d762ee8"
git = "https://github.com/paritytech/libsecp256k1.git"

[dependencies.md-5]
tag = "md5-v0.8.0"
git = "https://github.com/RustCrypto/hashes.git"

[dependencies.ripemd160]
tag = "ripemd160-v0.8.0"
git = "https://github.com/RustCrypto/hashes.git"

[dependencies.sha2]
tag = "sha2-v0.8.0"
git = "https://github.com/RustCrypto/hashes.git"

